buildscript {

	repositories {
		mavenCentral()
	}

}

group 'org.bvkatwijk.java.jasmine'
description 'Java Jasmine'
version '0.0.1'

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'jacoco'

sourceCompatibility = 1.9

repositories {
	mavenCentral()
}

configurations {
	testCompile.extendsFrom compileOnly
}

dependencies {

	compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.16.20'

	compile group: 'junit', name: 'junit', version: '4.12'
	compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.25'

	testCompile group: 'org.mockito', name: 'mockito-core', version: '2.8.47'

}

test {
	testLogging {
		events "standardOut", "started", "passed", "skipped", "failed"
	}
}

jacocoTestReport {
	reports {
		xml.enabled true
	}
}

check.dependsOn jacocoTestReport
